--- a/CW1/HSE-BANK/HSE-BANK.csproj
+++ b/CW1/HSE-BANK/HSE-BANK.csproj
@@ -16,9 +16,11 @@
       <PackageReference Include="CsvHelper" Version="33.0.1" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.0-preview.2.25163.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.2.25163.2" />
+      <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Scrutor" Version="6.0.1" />
       <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.76" />
+      <PackageReference Include="xunit" Version="2.9.3" />
       <PackageReference Include="YamlDotNet" Version="16.3.0" />
     </ItemGroup>
 
