--- a/mini_hw_2/mini_hw_2/mini_hw_2/mini_hw_2.csproj
+++ b/mini_hw_2/mini_hw_2/mini_hw_2/mini_hw_2.csproj
@@ -7,4 +7,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.3.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.3.25171.5" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+      <PackageReference Include="xunit" Version="2.9.3" />
+    </ItemGroup>
+
 </Project>
