--- a/CW2/CW2/FileAnalysisService/FileAnalysisService.csproj
+++ b/CW2/CW2/FileAnalysisService/FileAnalysisService.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
@@ -9,15 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Domain\" />
+      <ProjectReference Include="..\FileStoringService\FileStoringService.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.16" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
-      <PackageReference Include="Npgsql" Version="8.0.3" />
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
     </ItemGroup>
 
@@ -26,6 +21,5 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
-
 
 </Project>
